cabal-version:       >=1.10
name:                servant-conctest
version:             0.1.2
synopsis:            Concurrency tester for servant servers
description:         Concurrent race detector and linearizability tester for servant servers
category:            TODO
homepage:            https://github.com/plow-technologies/servant-conctest.git#readme
bug-reports:         https://github.com/plow-technologies/servant-conctest.git/issues
copyright:           Plow-Technologies LLC
license:             MIT
license-file:        LICENSE
author:              Siddharth Krishna
maintainer:          info@plowtech.net
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/plow-technologies/servant-conctest.git

library
  exposed-modules:
    Servant.ConcTest
    Servant.ConcTest.Utils
  hs-source-dirs: src
  build-depends:
      base
    , async
    , http-client
    , QuickCheck
    , servant-server
    , servant-client
    , warp
  default-language: Haskell2010
  ghc-options: -Wall -Wunused-packages -Wincomplete-uni-patterns -Wincomplete-record-updates

test-suite servant-conctest-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base >=4.7 && <5
    , QuickCheck
    , servant-conctest
  default-language:    Haskell2010
  ghc-options: -Wall -Wunused-packages -Wincomplete-uni-patterns -Wincomplete-record-updates

executable example
  main-is: Main.hs
  hs-source-dirs: app
  -- TODO try with O2?
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wunused-packages -threaded -with-rtsopts=-N
  build-depends:
      base
    , http-client
    , QuickCheck
    , servant-conctest
    , servant-server
    , servant-client
  default-language: Haskell2010
